update translation of books/design-44bsd to Russian Reviewed by: andy Differential Revision: https://reviews.freebsd.org/D53740

--- a/documentation/content/ru/books/design-44bsd/_index.po
+++ b/documentation/content/ru/books/design-44bsd/_index.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
 "POT-Creation-Date: 2024-12-29 08:29-0500\n"
-"PO-Revision-Date: 2025-10-29 04:45+0000\n"
+"PO-Revision-Date: 2025-11-13 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/booksdesign-44bsd_index/ru/>\n"
@@ -496,7 +496,7 @@ msgstr "1.9"
 #: documentation/content/en/books/design-44bsd/_index.adoc:169
 #, no-wrap
 msgid "virtual memory"
-msgstr "Виртуальная память"
+msgstr "виртуальная память"
 
 #. type: Table
 #: documentation/content/en/books/design-44bsd/_index.adoc:132
@@ -1630,7 +1630,7 @@ msgid ""
 "the data for several reasons:"
 msgstr ""
 "Еще одной проблемой с системой виртуальной памяти является способ, которым "
-"информация передается ядру при выполнении системного вызова. 4.4BSD всегда "
+"информация передаётся ядру при выполнении системного вызова. 4.4BSD всегда "
 "копирует данные из адресного пространства процесса в буфер ядра. Для "
 "операций чтения и записи, при которых передаются большие объемы данных, "
 "выполнение копирования может оказаться занимающим время процессом. "
@@ -1763,7 +1763,7 @@ msgstr ""
 "параметр, указывающий на размер памяти, который необходим. Диапазон "
 "запрашиваемых объемов выделяемой памяти не ограничен; однако выделяемая "
 "физическая память не подвергается постраничной подгрузке. Функции "
-"освобождения памяти передается указатель на освобождаемый участок памяти, но "
+"освобождения памяти передаётся указатель на освобождаемый участок памяти, но "
 "указывать размер освобождаемого участка памяти не нужно."
 
 #. type: Title ===
@@ -1909,7 +1909,7 @@ msgstr ""
 "межпроцессных коммуникаций; он существует, пока какой-либо процесс хранит "
 "дескриптор, ссылающийся на него. Сокет создается системным вызовом _socket_, "
 "который возвращает его дескриптор. Имеется несколько типов сокетов, которые "
-"поддерживают различные коммуникационные возможности, такие, как надежную "
+"поддерживают различные коммуникационные возможности, такие, как надёжную "
 "доставку данных, сохранение последовательности передаваемых сообщений, и "
 "сохранение границ сообщений."
 
@@ -2222,7 +2222,7 @@ msgstr ""
 "чем каналы, основанный на _сокетах_. Сокет является конечной точкой "
 "коммуникаций, доступный через дескриптор, как файл или канал. Каждый из двух "
 "процессов может создать сокет, а затем соединить эти конечные точки для "
-"получения надежного канала передачи потока байт. После соединения процесс "
+"получения надёжного канала передачи потока байт. После соединения процесс "
 "может выполнять с дескрипторами операции чтения и записи, как это делалось с "
 "каналами. Прозрачность сокетов позволяет ядру перенаправить вывод одного "
 "процесса на вход другого, работающего на другой машине. Большим различием "
@@ -2313,7 +2313,7 @@ msgstr ""
 "_writev_ позволяет осуществлять запись нескольких различных буферов за одну "
 "атомарную операцию записи. Вместо передачи одного буфера и его длины в "
 "качестве параметров, как это делается при использовании системных вызовов "
-"_read_ и _write_, процесс передает указатель на массив буферов и их длин, а "
+"_read_ и _write_, процесс передаёт указатель на массив буферов и их длин, а "
 "также счетчик, определяющий размер массива."
 
 #. type: Plain text
@@ -3125,7 +3125,7 @@ msgstr ""
 "драйверы терминальных устройств, которые управляют портами аппаратных "
 "терминалов. Терминальный ввод обрабатывается согласно низлежащим "
 "характеристикам связи, таким, как скорость передачи, и согласно набору "
-"программно контролируемых параметров, таких, как контроль четности."
+"программно контролируемых параметров, таких, как контроль чётности."
 
 #. type: Plain text
 #: documentation/content/en/books/design-44bsd/_index.adoc:740
@@ -3157,7 +3157,7 @@ msgid ""
 msgstr ""
 "Экранные редакторы и программы, которые взаимодействуют с другими машинами, "
 "обычно работают в _неканоническом режиме_ (часто называемом _raw-режимом_ "
-"или _посимвольным режимом_). В этом режиме входной поток передается в "
+"или _посимвольным режимом_). В этом режиме входной поток передаётся в "
 "читающий процесс сразу же и без всякой обработки. Выключается вся обработка "
 "специальных символов, не выполняется удаление символов и другое "
 "редактирование строк, все символы передаются программе, которая выполняет "
@@ -3270,7 +3270,7 @@ msgstr ""
 "_socket_ создает сокет и возвращает дескриптор; другие системные вызовы IPC "
 "описаны в Главе 11. Каждый сокет имеет тип, определяющий его "
 "коммуникационные свойства; к ним относятся такие характеристики, как "
-"надежность, сохранение последовательности передаваемой информации и "
+"надёжность, сохранение последовательности передаваемой информации и "
 "предупреждение дублирования сообщений."
 
 #. type: Plain text
