--- a/documentation/content/ru/books/developers-handbook/kernelbuild/_index.adoc
+++ b/documentation/content/ru/books/developers-handbook/kernelbuild/_index.adoc
@@ -59,7 +59,7 @@ endif::[]
 ====
 
 [[kernelbuild-traditional]]
-== Построение более быстрым, но менее надежным способом
+== Построение более быстрым, но менее надёжным способом
 
 Сборка ядра таким способом может быть полезной при работе с кодом ядра и может оказаться быстрее, чем описанная процедура, если в конфигурационном файле ядра были изменены только одна или две опции. С другой стороны, это может привести к неожиданным сбоям при сборке ядра.
 
