--- a/documentation/content/ru/books/developers-handbook/kerneldebug/_index.po
+++ b/documentation/content/ru/books/developers-handbook/kerneldebug/_index.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
 "POT-Creation-Date: 2025-06-29 21:20+0100\n"
-"PO-Revision-Date: 2025-09-05 04:45+0000\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/booksdevelopers-handbookkerneldebug_index/ru/>\n"
@@ -278,8 +278,8 @@ msgstr ""
 "Утилита man:crashinfo[8] создаёт текстовый файл, содержащий сводную "
 "информацию из полного дампа памяти или минидампа. Если параметр `dumpdev` "
 "установлен в man:rc.conf[5], man:crashinfo[8] будет автоматически вызван "
-"после man:savecore[8]. Результат сохраняется в файл с именем [."
-"filename]#core.txt.N# в директории `dumpdir`."
+"после man:savecore[8]. Результат сохраняется в файл с именем [.filename]#core"
+".txt.N# в каталоге `dumpdir`."
 
 #. type: Plain text
 #: documentation/content/en/books/developers-handbook/kerneldebug/_index.adoc:135
@@ -369,7 +369,7 @@ msgid ""
 "along with a matching summary from man:crashinfo[8]."
 msgstr ""
 "После перезагрузки система должна сохранить дамп в [.filename]#/var/crash# "
-"вместе с соответствующим отчетом из man:crashinfo[8]."
+"вместе с соответствующим отчётом из man:crashinfo[8]."
 
 #. type: Title ==
 #: documentation/content/en/books/developers-handbook/kerneldebug/_index.adoc:169
@@ -464,7 +464,7 @@ msgstr ""
 "является указателем инструкции и может быть найден в строке 17. Большинство "
 "разработчиков запросят как минимум эту информацию, если вы не сможете "
 "отладить проблему самостоятельно. Однако, если вы решите проблему, "
-"убедитесь, что ваш патч попадет в дерево исходников через отчет о проблеме, "
+"убедитесь, что ваш патч попадет в дерево исходников через отчёт о проблеме, "
 "списки рассылки, или, может быть, у вас есть возможность его закоммитить!"
 
 #. type: delimited block . 4
@@ -1442,8 +1442,8 @@ msgid ""
 msgstr ""
 "Вы можете столкнуться с так называемыми взаимоблокировками — ситуацией, "
 "когда система перестает выполнять полезную работу. Чтобы предоставить "
-"полезный отчет об ошибке в такой ситуации, используйте man:ddb[4], как "
-"описано в предыдущем разделе. Включите в отчет вывод команд `ps` и `trace` "
+"полезный отчёт об ошибке в такой ситуации, используйте man:ddb[4], как "
+"описано в предыдущем разделе. Включите в отчёт вывод команд `ps` и `trace` "
 "для подозрительных процессов."
 
 #. type: Plain text
@@ -2055,7 +2055,7 @@ msgstr ""
 "сигналу прерывания или альтернативному сигналу на консоли войти в отладчик. "
 "Если система зависает без паники, это полезный способ попасть в отладчик. Из-"
 "за текущей блокировки ядра сигнал прерывания, сгенерированный на "
-"последовательной консоли, значительно надежнее для входа в отладчик и обычно "
+"последовательной консоли, значительно надёжнее для входа в отладчик и обычно "
 "рекомендуется. Данная опция оказывает незначительное или нулевое влияние на "
 "производительность."
 
