--- a/documentation/content/ru/books/developers-handbook/l10n/_index.adoc
+++ b/documentation/content/ru/books/developers-handbook/l10n/_index.adoc
@@ -120,7 +120,7 @@ $set 1
 #ifdef WITHOUT_NLS
 #define getstr(n)	 nlsstr[n]
 #else
-#include nl_types.h
+#include <nl_types.h>
 
 extern nl_catd		 catalog;
 #define getstr(n)	 catgets(catalog, 1, n, nlsstr[n])
@@ -134,7 +134,7 @@ extern char		*nlsstr[];
 [.programlisting]
 ....
 #ifndef WITHOUT_NLS
-#include nl_types.h
+#include <nl_types.h>
 nl_catd	 catalog;
 #endif
 
@@ -176,7 +176,7 @@ printf(getstr(1));
 
 [.programlisting]
 ....
-#include err.h
+#include <err.h>
 ...
 if (!S_ISDIR(st.st_mode))
 	errx(1, "argument is not a directory");
@@ -186,8 +186,8 @@ if (!S_ISDIR(st.st_mode))
 
 [.programlisting]
 ....
-#include err.h
-#include errno.h
+#include <err.h>
+#include <errno.h>
 ...
 if (!S_ISDIR(st.st_mode)) {
 	errno = ENOTDIR;
@@ -201,7 +201,7 @@ if (!S_ISDIR(st.st_mode)) {
 
 [.programlisting]
 ....
-#include err.h
+#include <err.h>
 ...
 if ((p = malloc(size)) == NULL)
 	err(1, NULL);
