--- a/documentation/content/ru/books/developers-handbook/l10n/_index.po
+++ b/documentation/content/ru/books/developers-handbook/l10n/_index.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-05-01 19:56-0300\n"
-"PO-Revision-Date: 2025-06-24 04:45+0000\n"
+"POT-Creation-Date: 2025-11-08 16:17+0000\n"
+"PO-Revision-Date: 2025-11-11 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/booksdevelopers-handbookl10n_index/ru/>\n"
@@ -138,9 +138,7 @@ msgstr ""
 #: documentation/content/en/books/developers-handbook/l10n/_index.adoc:83
 #, no-wrap
 msgid "Localized Messages with POSIX.1 Native Language Support (NLS)"
-msgstr ""
-"Локализованные сообщения с поддержкой родного языка POSIX.1 (NLS — Native "
-"Language Support)"
+msgstr "Локализованные сообщения с поддержкой родного языка POSIX.1 (NLS — Native Language Support)"
 
 #. type: Plain text
 #: documentation/content/en/books/developers-handbook/l10n/_index.adoc:87
@@ -212,23 +210,21 @@ msgid ""
 "localized message.  The well-known modifiers from man:printf[3] are accepted:"
 msgstr ""
 "Фактические записи сообщений начинаются с номера сообщения, за которым "
-"следует локализованное сообщение. Допускаются известные модификаторы из "
-"man:printf[3]:"
+"следует локализованное сообщение. Допускаются известные модификаторы из man:"
+"printf[3]:"
 
 #. type: delimited block . 4
 #: documentation/content/en/books/developers-handbook/l10n/_index.adoc:112
 #, no-wrap
 msgid "15 \"File not found: %s\\n\"\n"
-msgstr ""
-"15 \"File not found: %s\\n"
-"\"\n"
+msgstr "15 \"File not found: %s\\n\"\n"
 
 #. type: Plain text
 #: documentation/content/en/books/developers-handbook/l10n/_index.adoc:118
 msgid ""
 "The language catalog files have to be compiled into a binary form before "
-"they can be opened from the program.  This conversion is done with the "
-"man:gencat[1] utility.  Its first argument is the filename of the compiled "
+"they can be opened from the program.  This conversion is done with the man:"
+"gencat[1] utility.  Its first argument is the filename of the compiled "
 "catalog and its further arguments are the input catalogs.  The localized "
 "messages can also be organized into more catalog files and then all of them "
 "can be processed with man:gencat[1]."
@@ -249,8 +245,8 @@ msgstr "Использование файлов каталога из исход
 #. type: Plain text
 #: documentation/content/en/books/developers-handbook/l10n/_index.adoc:131
 msgid ""
-"Using the catalog files is simple.  To use the related functions, "
-"[.filename]#nl_types.h# must be included.  Before using a catalog, it has to "
+"Using the catalog files is simple.  To use the related functions, [."
+"filename]#nl_types.h# must be included.  Before using a catalog, it has to "
 "be opened with man:catopen[3].  The function takes two arguments.  The first "
 "parameter is the name of the installed and compiled catalog.  Usually, the "
 "name of the program is used, such as grep.  This name will be used when "
@@ -265,11 +261,11 @@ msgstr ""
 "каталога его нужно открыть с помощью man:catopen[3]. Функция принимает два "
 "аргумента. Первый параметр — это имя установленного и скомпилированного "
 "каталога. Обычно используется имя программы, например, grep. Это имя будет "
-"использоваться при поиске скомпилированного файла каталога. Вызов "
-"man:catopen[3] ищет этот файл в [.filename]#/usr/share/nls/locale/catname# и "
-"в [.filename]#/usr/local/share/nls/locale/catname#, где `locale` — "
-"установленная локализация, а `catname` — имя обсуждаемого каталога. Второй "
-"параметр — это константа, которая может принимать два значения:"
+"использоваться при поиске скомпилированного файла каталога. Вызов man:"
+"catopen[3] ищет этот файл в [.filename]#/usr/share/nls/locale/catname# и в [."
+"filename]#/usr/local/share/nls/locale/catname#, где `locale` — установленная "
+"локализация, а `catname` — имя обсуждаемого каталога. Второй параметр — это "
+"константа, которая может принимать два значения:"
 
 #. type: Plain text
 #: documentation/content/en/books/developers-handbook/l10n/_index.adoc:133
@@ -317,8 +313,8 @@ msgid ""
 "After using the catalog file, it must be closed by calling man:catclose[3], "
 "which has one argument, the catalog id."
 msgstr ""
-"После использования файла каталога его необходимо закрыть, вызвав "
-"man:catclose[3], которая принимает один аргумент — идентификатор каталога."
+"После использования файла каталога его необходимо закрыть, вызвав man:"
+"catclose[3], которая принимает один аргумент — идентификатор каталога."
 
 #. type: Title ===
 #: documentation/content/en/books/developers-handbook/l10n/_index.adoc:144
@@ -353,12 +349,12 @@ msgid ""
 "#ifdef WITHOUT_NLS\n"
 "#define getstr(n)\t nlsstr[n]\n"
 "#else\n"
-"#include nl_types.h\n"
+"#include <nl_types.h>\n"
 msgstr ""
 "#ifdef WITHOUT_NLS\n"
 "#define getstr(n)\t nlsstr[n]\n"
 "#else\n"
-"#include nl_types.h\n"
+"#include <nl_types.h>\n"
 
 #. type: delimited block . 4
 #: documentation/content/en/books/developers-handbook/l10n/_index.adoc:160
@@ -392,12 +388,12 @@ msgstr ""
 #, no-wrap
 msgid ""
 "#ifndef WITHOUT_NLS\n"
-"#include nl_types.h\n"
+"#include <nl_types.h>\n"
 "nl_catd\t catalog;\n"
 "#endif\n"
 msgstr ""
 "#ifndef WITHOUT_NLS\n"
-"#include nl_types.h\n"
+"#include <nl_types.h>\n"
 "nl_catd\t catalog;\n"
 "#endif\n"
 
@@ -498,12 +494,12 @@ msgstr "Вот пример, который не использует сообщ
 #: documentation/content/en/books/developers-handbook/l10n/_index.adoc:216
 #, no-wrap
 msgid ""
-"#include err.h\n"
+"#include <err.h>\n"
 "...\n"
 "if (!S_ISDIR(st.st_mode))\n"
 "\terrx(1, \"argument is not a directory\");\n"
 msgstr ""
-"#include err.h\n"
+"#include <err.h>\n"
 "...\n"
 "if (!S_ISDIR(st.st_mode))\n"
 "\terrx(1, \"argument is not a directory\");\n"
@@ -521,16 +517,16 @@ msgstr ""
 #: documentation/content/en/books/developers-handbook/l10n/_index.adoc:229
 #, no-wrap
 msgid ""
-"#include err.h\n"
-"#include errno.h\n"
+"#include <err.h>\n"
+"#include <errno.h>\n"
 "...\n"
 "if (!S_ISDIR(st.st_mode)) {\n"
 "\terrno = ENOTDIR;\n"
 "\terr(1, NULL);\n"
 "}\n"
 msgstr ""
-"#include err.h\n"
-"#include errno.h\n"
+"#include <err.h>\n"
+"#include <errno.h>\n"
 "...\n"
 "if (!S_ISDIR(st.st_mode)) {\n"
 "\terrno = ENOTDIR;\n"
@@ -567,12 +563,12 @@ msgstr ""
 #: documentation/content/en/books/developers-handbook/l10n/_index.adoc:243
 #, no-wrap
 msgid ""
-"#include err.h\n"
+"#include <err.h>\n"
 "...\n"
 "if ((p = malloc(size)) == NULL)\n"
 "\terr(1, NULL);\n"
 msgstr ""
-"#include err.h\n"
+"#include <err.h>\n"
 "...\n"
 "if ((p = malloc(size)) == NULL)\n"
 "\terr(1, NULL);\n"
@@ -590,8 +586,8 @@ msgid ""
 "catalogs and installing them to the proper location.  In order to simplify "
 "this process even more, [.filename]#bsd.nls.mk# introduces some macros.  It "
 "is not necessary to include [.filename]#bsd.nls.mk# explicitly, it is pulled "
-"in from the common Makefiles, such as [.filename]#bsd.prog.mk# or "
-"[.filename]#bsd.lib.mk#."
+"in from the common Makefiles, such as [.filename]#bsd.prog.mk# or [."
+"filename]#bsd.lib.mk#."
 msgstr ""
 "Использование файлов каталогов требует нескольких повторяемых шагов, таких "
 "как компиляция каталогов и их установка в нужное место. Чтобы ещё больше "
@@ -647,14 +643,14 @@ msgid ""
 "catalog files also follow the naming convention mentioned before.  It can be "
 "overridden by setting the `NLSNAME` variable.  There are other options to "
 "fine tune the processing of the catalog files but usually it is not needed, "
-"thus they are not described here.  For further information on "
-"[.filename]#bsd.nls.mk#, please refer to the file itself, it is short and "
-"easy to understand."
+"thus they are not described here.  For further information on [."
+"filename]#bsd.nls.mk#, please refer to the file itself, it is short and easy "
+"to understand."
 msgstr ""
 "Обычно файлы каталогов размещаются в подкаталоге [.filename]#nls#, и это "
 "поведение по умолчанию для [.filename]#bsd.nls.mk#. Однако можно "
-"переопределить расположение каталогов с помощью переменной `NLSSRCDIR` "
-"man:make[1]. Имя по умолчанию для предварительно скомпилированных файлов "
+"переопределить расположение каталогов с помощью переменной `NLSSRCDIR` man:"
+"make[1]. Имя по умолчанию для предварительно скомпилированных файлов "
 "каталогов также следует упомянутому ранее соглашению об именовании. Его "
 "можно переопределить, установив переменную `NLSNAME`. Существуют и другие "
 "параметры для точной настройки обработки файлов каталогов, но обычно в этом "
