--- a/documentation/content/ru/books/developers-handbook/secure/_index.po
+++ b/documentation/content/ru/books/developers-handbook/secure/_index.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-05-01 19:56-0300\n"
-"PO-Revision-Date: 2025-10-29 04:45+0000\n"
+"POT-Creation-Date: 2025-11-08 16:17+0000\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/booksdevelopers-handbooksecure_index/ru/>\n"
@@ -63,11 +63,11 @@ msgstr "Методология безопасного проектировани
 #: documentation/content/en/books/developers-handbook/secure/_index.adoc:64
 msgid ""
 "Writing secure applications takes a very scrutinous and pessimistic outlook "
-"on life.  Applications should be run with the principle of \"least "
-"privilege\" so that no process is ever running with more than the bare "
-"minimum access that it needs to accomplish its function.  Previously tested "
-"code should be reused whenever possible to avoid common mistakes that others "
-"may have already fixed."
+"on life.  Applications should be run with the principle of \"least privilege"
+"\" so that no process is ever running with more than the bare minimum access "
+"that it needs to accomplish its function.  Previously tested code should be "
+"reused whenever possible to avoid common mistakes that others may have "
+"already fixed."
 msgstr ""
 "Написание безопасных приложений требует очень внимательного и "
 "пессимистичного взгляда на жизнь. Приложения должны работать по принципу "
@@ -102,13 +102,13 @@ msgstr "Переполнение буфера"
 #: documentation/content/en/books/developers-handbook/secure/_index.adoc:76
 msgid ""
 "Buffer Overflows have been around since the very beginnings of the von "
-"Neumann crossref:bibliography[cod,1] architecture.  They first gained "
+"Neumann crossref:bibliography[COD,1] architecture.  They first gained "
 "widespread notoriety in 1988 with the Morris Internet worm.  Unfortunately, "
 "the same basic attack remains effective today.  By far the most common type "
 "of buffer overflow attack is based on corrupting the stack."
 msgstr ""
 "Переполнение буфера существовало с самых истоков архитектуры фон Неймана "
-"crossref:bibliography[cod,1]. Впервые оно получило широкую известность в "
+"crossref:bibliography[COD,1]. Впервые оно получило широкую известность в "
 "1988 году благодаря червю Морриса. К сожалению, эта базовая атака остаётся "
 "эффективной и по сей день. Наиболее распространённый тип атаки с "
 "переполнением буфера основан на повреждении стека."
@@ -126,7 +126,7 @@ msgid ""
 "as new values are pushed onto the top of the stack, many implementations "
 "also provide a \"frame pointer\" that is located near the beginning of a "
 "stack frame so that local variables can more easily be addressed relative to "
-"this value.  crossref:bibliography[cod,1] The return address for function "
+"this value.  crossref:bibliography[COD,1] The return address for function "
 "calls is also stored on the stack, and this is the cause of stack-overflow "
 "exploits since overflowing a local variable in a function can overwrite the "
 "return address of that function, potentially allowing a malicious user to "
@@ -143,7 +143,7 @@ msgstr ""
 "на вершину стека, многие реализации также предоставляют \"указатель кадра\", "
 "который располагается вблизи начала стекового кадра, чтобы локальные "
 "переменные могли легче адресоваться относительно этого значения. "
-"crossref:bibliography[cod,1] Адрес возврата для вызовов функций также "
+"crossref:bibliography[COD,1] Адрес возврата для вызовов функций также "
 "хранится в стеке, и это является причиной эксплойтов переполнения стека, "
 "поскольку переполнение локальной переменной в функции может перезаписать "
 "адрес возврата этой функции, потенциально позволяя злоумышленнику выполнить "
@@ -301,9 +301,7 @@ msgstr ""
 #: documentation/content/en/books/developers-handbook/secure/_index.adoc:150
 #, no-wrap
 msgid "  while ((buffer[i++] = getchar()) != '\\n') {};\n"
-msgstr ""
-"  while ((buffer[i++] = getchar()) != '\\n"
-"') {};\n"
+msgstr "  while ((buffer[i++] = getchar()) != '\\n') {};\n"
 
 #. type: delimited block . 4
 #: documentation/content/en/books/developers-handbook/secure/_index.adoc:157
@@ -319,8 +317,7 @@ msgstr ""
 "  i=1;\n"
 "  manipulate(buffer);\n"
 "  i=2;\n"
-"  printf(\"The value of i is : %d\\n"
-"\",i);\n"
+"  printf(\"The value of i is : %d\\n\",i);\n"
 "  return 0;\n"
 "}\n"
 
@@ -375,8 +372,9 @@ msgstr ""
 "также используется неодинаково между `strncpy` и `strncat`, что может "
 "сбивать программистов с толку относительно их правильного использования. "
 "Также наблюдается значительное снижение производительности по сравнению с "
-"`strcpy` при копировании короткой строки в большой буфер, поскольку `strncpy`"
-" заполняет оставшееся пространство до указанного размера символами NUL."
+"`strcpy` при копировании короткой строки в большой буфер, поскольку "
+"`strncpy` заполняет оставшееся пространство до указанного размера символами "
+"NUL."
 
 #. type: Plain text
 #: documentation/content/en/books/developers-handbook/secure/_index.adoc:178
@@ -414,12 +412,12 @@ msgstr ""
 #: documentation/content/en/books/developers-handbook/secure/_index.adoc:186
 msgid ""
 "ProPolice is one such compiler feature, and is integrated into man:gcc[1] "
-"versions 4.1 and later.  It replaces and extends the earlier StackGuard "
-"man:gcc[1] extension."
+"versions 4.1 and later.  It replaces and extends the earlier StackGuard man:"
+"gcc[1] extension."
 msgstr ""
-"ProPolice — это одна из таких функций компилятора, интегрированная в "
-"man:gcc[1] версий 4.1 и выше. Она заменяет и расширяет более раннее "
-"расширение StackGuard для man:gcc[1]."
+"ProPolice — это одна из таких функций компилятора, интегрированная в man:"
+"gcc[1] версий 4.1 и выше. Она заменяет и расширяет более раннее расширение "
+"StackGuard для man:gcc[1]."
 
 #. type: Plain text
 #: documentation/content/en/books/developers-handbook/secure/_index.adoc:190
@@ -570,8 +568,8 @@ msgid ""
 "effect until you `chdir()` into your new environment.  It should also be "
 "noted that a process can easily break out of a chroot environment if it has "
 "root privilege.  This could be accomplished by creating device nodes to read "
-"kernel memory, attaching a debugger to a process outside of the "
-"man:chroot[8] environment, or in many other creative ways."
+"kernel memory, attaching a debugger to a process outside of the man:"
+"chroot[8] environment, or in many other creative ways."
 msgstr ""
 "Традиционный метод ограничения процесса — это системный вызов `chroot()`. "
 "Этот системный вызов изменяет корневой каталог, от которого ссылаются все "
@@ -647,8 +645,8 @@ msgid ""
 "Manipulate credential with `setuid`, `seteuid`, `setgid`, `setegid`, "
 "`setgroups`, `setreuid`, `setregid`, `setlogin`"
 msgstr ""
-"Управлять учетными данными с помощью `setuid`, `seteuid`, `setgid`, `setegid`"
-", `setgroups`, `setreuid`, `setregid`, `setlogin`"
+"Управлять учетными данными с помощью `setuid`, `seteuid`, `setgid`, "
+"`setegid`, `setgroups`, `setreuid`, `setregid`, `setlogin`"
 
 #. type: Plain text
 #: documentation/content/en/books/developers-handbook/secure/_index.adoc:248
@@ -726,9 +724,9 @@ msgid ""
 "[TrustedBSD] project.  Some of the initial work has been committed to "
 "FreeBSD-CURRENT (cap_set_proc(3))."
 msgstr ""
-"Это работа в процессе, и она является основным направлением проекта "
-"http://www.trustedbsd.org/[TrustedBSD]. Некоторые первоначальные наработки "
-"были добавлены в FreeBSD-CURRENT (cap_set_proc(3))."
+"Это работа в процессе, и она является основным направлением проекта http://"
+"www.trustedbsd.org/[TrustedBSD]. Некоторые первоначальные наработки были "
+"добавлены в FreeBSD-CURRENT (cap_set_proc(3))."
 
 #. type: Title ==
 #: documentation/content/en/books/developers-handbook/secure/_index.adoc:266
@@ -747,8 +745,8 @@ msgstr ""
 "Приложение никогда не должно предполагать, что окружение пользователя "
 "является предсказуемым. Это включает (но не ограничивается): "
 "пользовательский ввод, сигналы, переменные окружения, ресурсы, IPC, mmaps, "
-"текущую рабочую директорию файловой системы, файловые дескрипторы, "
-"количество открытых файлов и т.д."
+"текущий рабочий каталог файловой системы, файловые дескрипторы, количество "
+"открытых файлов и т.д."
 
 #. type: Plain text
 #: documentation/content/en/books/developers-handbook/secure/_index.adoc:275
