--- a/documentation/content/ru/books/developers-handbook/sockets/_index.po
+++ b/documentation/content/ru/books/developers-handbook/sockets/_index.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
 "POT-Creation-Date: 2025-05-01 19:56-0300\n"
-"PO-Revision-Date: 2025-09-05 04:45+0000\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/booksdevelopers-handbooksockets_index/ru/>\n"
@@ -1370,7 +1370,7 @@ msgid ""
 "order_.  You need to recompile all your software.  All of your software "
 "continues to perform well, except the one program you wrote."
 msgstr ""
-"Затем, однажды, ваш надежный старый Pentium(R) превращается в ржавый старый "
+"Затем, однажды, ваш надёжный старый Pentium(R) превращается в ржавый старый "
 "Pentium(R). Вы заменяете его системой, у которой _порядок байтов хоста_ "
 "совпадает с _сетевым порядком байтов_. Вам нужно перекомпилировать все ваше "
 "программное обеспечение. Все ваши программы продолжают работать хорошо, "
