--- a/documentation/content/ru/books/developers-handbook/testing/_index.po
+++ b/documentation/content/ru/books/developers-handbook/testing/_index.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
 "POT-Creation-Date: 2025-05-01 19:56-0300\n"
-"PO-Revision-Date: 2025-06-27 04:45+0000\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/booksdevelopers-handbooktesting_index/ru/>\n"
@@ -479,7 +479,7 @@ msgstr ""
 "tbmaster. Хотя изначально он предназначался для использования в качестве CGI-"
 "скрипта, как следует из его названия, этот скрипт также может быть запущен "
 "из командной строки или из задачи man:cron[8], в таком случае он будет "
-"искать логи в директории, где расположен сам скрипт. Он автоматически "
+"искать логи в каталоге, где расположен сам скрипт. Он автоматически "
 "определяет контекст, генерируя HTTP-заголовки при запуске в качестве CGI-"
 "скрипта. Он соответствует стандартам XHTML и использует CSS для стилизации."
 
