--- a/documentation/content/ru/books/developers-handbook/x86/_index.adoc
+++ b/documentation/content/ru/books/developers-handbook/x86/_index.adoc
@@ -211,7 +211,7 @@ etc...
 Кроме того, система должна уведомлять нас, если возникает ошибка: файл не существует, системные ресурсы исчерпаны, передан недопустимый параметр и т. д.
 
 [[x86-man-pages]]
-=== Страницы справочника
+=== Страницы Справочника
 
 Традиционным источником информации о различных системных вызовах в UNIX(R)-системах являются страницы Справочника. В FreeBSD системные вызовы описаны в разделе 2, иногда в разделе 3.
 
@@ -2513,7 +2513,7 @@ D = PC * sqrt(FL)
 [[x86-f-number]]
 ==== Число f (диафрагменное число)
 
-Число f — это очень полезный показатель того, сколько света попадает на плёнку. Экспонометр может определить, что, например, для экспонирования плёнки определённой чувствительности при f5.6 может потребоваться выдержка 1/1000 сек.
+Число f — это очень полезный показатель того, сколько света попадает на плёнку. Экспонометр может определить, что, например, для экспонирования плёнки определённой чувствительности при f/5.6 может потребоваться выдержка 1/1000 сек.
 
 Не имеет значения, 35-мм это камера или камера 6x9 см и т.д. Достаточно знать диафрагменное число, чтобы определить правильную экспозицию.
 
