--- a/documentation/content/ru/books/developers-handbook/_index.po
+++ b/documentation/content/ru/books/developers-handbook/_index.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-05-01 19:56-0300\n"
-"PO-Revision-Date: 2025-07-05 04:45+0000\n"
+"POT-Creation-Date: 2025-11-08 16:17+0000\n"
+"PO-Revision-Date: 2025-11-09 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/booksdevelopers-handbook_index/ru/>\n"
@@ -22,9 +22,7 @@ msgstr ""
 #: documentation/content/en/books/developers-handbook/_index.adoc:1
 #, no-wrap
 msgid "For people who want to develop software for FreeBSD (and not just people who are developing FreeBSD itself)"
-msgstr ""
-"Для тех, кто хочет разрабатывать программное обеспечение для FreeBSD (а не "
-"только для тех, кто разрабатывает саму FreeBSD)"
+msgstr "Для тех, кто хочет разрабатывать программное обеспечение для FreeBSD (а не только для тех, кто разрабатывает саму FreeBSD)"
 
 #. type: Title =
 #: documentation/content/en/books/developers-handbook/_index.adoc:1
@@ -54,17 +52,17 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/books/developers-handbook/_index.adoc:59
 msgid ""
-"The latest version of this document is always available from the "
-"link:https://www.FreeBSD.org[FreeBSD World Wide Web server].  It may also be "
-"downloaded in a variety of formats and compression options from the "
-"link:https://download.freebsd.org/doc/[FreeBSD download server] or one of "
-"the numerous extref:{handbook}[mirror sites, mirrors]."
+"The latest version of this document is always available from the link:"
+"https://www.FreeBSD.org[FreeBSD World Wide Web server].  It may also be "
+"downloaded in a variety of formats and compression options from the link:"
+"https://download.freebsd.org/doc/[FreeBSD download server] or one of the "
+"numerous extref:{handbook}mirrors[mirror sites, mirrors]."
 msgstr ""
 "Последняя версия этого документа всегда доступна по ссылке link:https://www."
 "FreeBSD.org[веб-сервер FreeBSD]. Его также можно загрузить в различных "
 "форматах и с разными вариантами сжатия с link:https://download.freebsd.org/"
 "doc/[сервера загрузки FreeBSD] или одного из многочисленных "
-"extref:{handbook}[зеркальных сайтов, mirrors]."
+"extref:{handbook}mirrors[зеркальных сайтов, mirrors]."
 
 #. type: Plain text
 #: documentation/content/en/books/developers-handbook/_index.adoc:60
