--- a/documentation/content/ru/books/developers-handbook/kernelbuild/_index.po
+++ b/documentation/content/ru/books/developers-handbook/kernelbuild/_index.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
 "POT-Creation-Date: 2025-05-01 19:56-0300\n"
-"PO-Revision-Date: 2025-06-24 20:10+0000\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/booksdevelopers-handbookkernelbuild_index/ru/>\n"
@@ -72,7 +72,7 @@ msgstr ""
 #: documentation/content/en/books/developers-handbook/kernelbuild/_index.adoc:65
 #, no-wrap
 msgid "Building the Faster but Brittle Way"
-msgstr "Построение более быстрым, но менее надежным способом"
+msgstr "Построение более быстрым, но менее надёжным способом"
 
 #. type: Plain text
 #: documentation/content/en/books/developers-handbook/kernelbuild/_index.adoc:69
